on the page "animals" added block increase index - fixed screen 7

--- a/animals.html
+++ b/animals.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="fonts.css">
    <link rel="stylesheet" href="style_animals.css">
-   <title>Document</title>
+   <title>Наши подопечные</title>
 </head>
 
 <body>
@@ -14,9 +14,9 @@
       <header>
          <div class="navigation">
             <div class="button-yellow">
-               <a href="index_new.html"><img src="/img/Vector.png" alt="стрелочка"></a>
+               <a href="index.html"><img src="/img/Vector.png" alt="стрелочка"></a>
             </div>
-            <a href="index_new.html" class="gray_4">Вернуться назад</a>
+            <a href="index.html" class="gray_4">Вернуться назад</a>
             <h3 class="semibold gray_2">Наши подопечные</h3>
             <p class="gray_4 text">Показать</p>
             <select>
@@ -28,6 +28,7 @@
       </header>
       <main>
          <article class="grid">
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Моник.png" alt="Моник">
                <figcaption>
@@ -36,8 +37,26 @@
                   <p class="text_sm_medium gray_4">Мальчик, 7 месяцев </p>
                   <p class="text_sm_medium gray_2 text">К поводку приучен. Не агрессивный. В еде не привередничает. С другими животными не конфликтует. Привит.</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
             </figure>
+            </div>
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Лунатик.png" alt="Лунатик">
                <figcaption>
@@ -46,8 +65,26 @@
                   <p class="text_sm_medium gray_4"> Мальчик, 7 месяцев </p>
                   <p class="text_sm_medium gray_2 text">Малыш хочет домой и часто плачет.</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
-            </figure>
+             </figure>
+            </div>
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Герда.png" alt="Герда">
                <figcaption>
@@ -56,8 +93,26 @@
                   <p class="text_sm_medium gray_4">Мальчик, 7 месяцев </p>
                   <p class="text_sm_medium gray_2 text" >ОВеселый и очень игривый, ему так нужны ваша любовь и ласка.У него потрясающая густая шерсть в полосочку.</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
             </figure>
+            </div>
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Саки.png" alt="Саки">
                <figcaption>
@@ -66,8 +121,26 @@
                   <p class="text_sm_medium gray_4">Мальчик, 7 месяцев </p>
                   <p class="text_sm_medium gray_2 text">Серьезный кот в серьезные руки. Будет преданным только одному хозяину.</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
             </figure>
+            </div>
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Моник-собака.png" alt="Моник">
                <figcaption>
@@ -76,8 +149,26 @@
                   <p class="text_sm_medium gray_4"> Мальчик, 7 месяцев </p>
                   <p class="text_sm_medium gray_2 text">К поводку приучен. Не агрессивный. В еде не привередничает. С другими животными не конфликтует. Привит.</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
             </figure>
+            </div>
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Андреантино.png" alt="Андреантино">
                <figcaption>
@@ -86,8 +177,26 @@
                   <p class="text_sm_medium gray_4">Мальчик, 7 месяцев</p>
                   <p class="text_sm_medium gray_2 text">Супер дружелюбный пес. Спешите, таких больше не найдете.</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
             </figure>
+            </div>
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Пупсик.png" alt="Пупсик">
                <figcaption>
@@ -96,8 +205,26 @@
                   <p class="text_sm_medium gray_4">Мальчик, 3 месяцев </p>
                   <p class="text_sm_medium gray_2 text">Милый песик. Очень игривый. Черная шубка светится на солнце и переливается синим.</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
             </figure>
+            </div>
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Мишка.png" alt="Мишка">
                <figcaption>
@@ -106,8 +233,26 @@
                   <p class="text_sm_medium gray_4"> Мальчик, 2 месяцев </p>
                   <p class="text_sm_medium gray_2 text">Малыш хочет домой и часто плачет.</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
             </figure>
+            </div>
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Красавчик.png" alt="Красавчик">
                <figcaption>
@@ -116,8 +261,26 @@
                   <p class="text_sm_medium gray_4">Мальчик, 7 месяцев  </p>
                   <p class="text_sm_medium gray_2 text">Мудрый кот. Аккуратный и нежный. Не царапает вещи и мебель. Кушает все!</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
             </figure>
+            </div>
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Бобик.png" alt="Бобик">
                <figcaption>
@@ -126,8 +289,26 @@
                   <p class="text_sm_medium gray_4">Девочка, 2 года</p>
                   <p class="text_sm_medium gray_2 text">Девочка-красотка будет надежным защитником и другом хорошему человеку.</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
             </figure>
+            </div>
+            <div class="grid-wrap">
             <figure>
                <img src="/img/animals/Милаха.png" alt="Милаха">
                <figcaption>
@@ -136,8 +317,25 @@
                   <p class="text_sm_medium gray_4"> Мальчик, 7 месяцев </p>
                   <p class="text_sm_medium gray_2 text">Мальчиш-крепыш. Здоров, привит и кастрирован.</p>
                   <a class="all dirty_yellow" href="#">Подробнее</a>
+                  <div class="buttons">
+                     <div class="rectangle-1">
+                        <div class="rectangle-2">
+                           <button class="button">
+                              <a href=""><b>Забрать домой</b></a>
+                           </button>
+                        </div>
+                     </div>
+                     <div class="rectangle-1-white">
+                        <div class="rectangle-2-white">
+                           <button class="button">
+                              <a href=""><b>Забрать на передержку</b></a>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
                </figcaption>
             </figure>
+            </div>
          </article>
       </main>
       <footer>
