--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="fonts.css">
    <link rel="stylesheet" href="style_new.css">
-   <title>Document</title>
+   <title>Save life</title>
 </head>
 
 <body>
@@ -335,15 +335,47 @@
             </div>
          </section>
          <section class="screen_7 white">
-            <h3 class="medium_28 gray_2">Новости</h3>
+            <h3 class="medium_28 gray_2" id="news">Новости</h3>
             <article>
-               <div class="navigation">
+               <div class="news">
+               
+                  <class class="navigation">
                   <img src="/img/новость-1.png" alt="черный пес">
                   <p class="gray_2">Срочно необходимо забрать собаку (мальчик) на передержку или насовсем. Послезавтра
                      его
                      ждет усыпление. С кормом и доставкой поможем. В данный момент находится в вольера САХа. <br>
                      Контактный телефон + 37529 58930557<br>
                      Спасите жизнь хвостику.</p>
+               </class>
+               <div class="navigation">
+                  <img src="/img/новость-2.png" alt="щенки">
+                  <p class="gray_2" >Найдены бедомные щенки по улице Горького д.56.<br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или
+                     пристроить
+                     малышей - будем вам очень благодарны.</p>
+               </div>
+               
+               <details>
+                  <summary></summary>
+               <div class="navigation">
+                  <img src="/img/новость-2.png" alt="щенки">
+                  <p class="gray_2">Найдены бедомные щенки по улице Горького д.56.<br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или
+                     пристроить
+                     малышей - будем вам очень благодарны.</p>
+               </div>
+               <div class="navigation">
+                  <img src="/img/новость-2.png" alt="щенки">
+                  <p class="gray_2">Найдены бедомные щенки по улице Горького д.56.<br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или
+                     пристроить
+                     малышей - будем вам очень благодарны.Найдены бедомные щенки по улице Горького д.56.<br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или
+                     пристроить
+                     малышей - будем вам очень благодарны.Найдены бедомные щенки по улице Горького д.56.<br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или
+                     пристроить
+                     малышей - будем вам очень благодарны.</p>
                </div>
                <div class="navigation">
                   <img src="/img/новость-2.png" alt="щенки">
@@ -352,8 +384,17 @@
                      пристроить
                      малышей - будем вам очень благодарны.</p>
                </div>
-            </article>
-            <a class="all dirty_yellow" href="#">Показать все новости</a>
+               <div class="navigation">
+                  <img src="/img/новость-2.png" alt="щенки">
+                  <p class="gray_2">Найдены бедомные щенки по улице Горького д.56.<br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или
+                     пристроить
+                     малышей - будем вам очень благодарны.</p>
+               </div>
+               </details>
+               </div>
+               </article>
+           <div class="space"></div>
          </section>
          <section class="screen_8" id="about_u">
             <h3 class="medium_28 gray_2">О нас</h3>
