--- a/next.html
+++ b/next.html
@@ -26,14 +26,18 @@
       </div>
    </div>
    <header>
-      <div class="flex">
-         
-         <div class="menu">
-            <a href="#" class="menu__link">Как помочь</a>
-            <a href="#" class="menu__link">Подопечные животные</a>
-            <a href="#" class="menu__link">О нас</a>
-            <a href="#" class="menu__link">Контакты</a>
-         </div>
+      <div class="flex hamburger-menu">
+         <input id="menu__toggle" type="checkbox" />
+         <label class="menu__btn" for="menu__toggle">
+            <span></span>
+         </label>
+
+         <ul class="menu__box flex">
+           <li><a href="#" class="menu__link">Как помочь</a></li> 
+           <li><a href="#" class="menu__link">Подопечные животные</a></li>
+           <li><a href="#" class="menu__link">О нас</a></li>
+           <li><a href="#" class="menu__link">Контакты</a></li> 
+         </ul>
             
          <div class="flex button-logo-menu">
             <div class="button-logo-vk">
@@ -44,7 +48,7 @@
                </div>
                </div>            
             </div>
-            <div class="button-logo__inst">
+            <div class="button-logo-inst">
                <div class="button-logo-outercircle-yellow"><div class="button-logo-innercircle-yellow">
                   <a href="https://www.instagram.com/animalsgrodno/" target="_blank" ><svg width="30" height="30" class="button-logo-inst__link" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                      <path d="M13.4964 8.99808C11.0175 8.99808 8.99454 11.0211 8.99454 13.5C8.99454 15.9789 11.0175 18.0019 13.4964 18.0019C15.9752 18.0019 17.9982 15.9789 17.9982 13.5C17.9982 11.0211 15.9752 8.99808 13.4964 8.99808ZM26.9985 13.5C26.9985 11.6357 27.0154 9.78837 26.9107 7.92748C26.806 5.76602 26.3129 3.84773 24.7324 2.26716C23.1485 0.683215 21.2336 0.19351 19.0722 0.0888138C17.2079 -0.0158819 15.3606 0.00100455 13.4997 0.00100455C11.6355 0.00100455 9.78819 -0.0158819 7.92734 0.0888138C5.76592 0.19351 3.84766 0.686593 2.26712 2.26716C0.683203 3.85111 0.193506 5.76602 0.0888122 7.92748C-0.0158816 9.79174 0.00100453 11.6391 0.00100453 13.5C0.00100453 15.3609 -0.0158816 17.2116 0.0888122 19.0725C0.193506 21.234 0.68658 23.1523 2.26712 24.7328C3.85103 26.3168 5.76592 26.8065 7.92734 26.9112C9.79156 27.0159 11.6389 26.999 13.4997 26.999C15.364 26.999 17.2113 27.0159 19.0722 26.9112C21.2336 26.8065 23.1518 26.3134 24.7324 24.7328C26.3163 23.1489 26.806 21.234 26.9107 19.0725C27.0188 17.2116 26.9985 15.3643 26.9985 13.5ZM13.4964 20.4268C9.66323 20.4268 6.56969 17.3332 6.56969 13.5C6.56969 9.66679 9.66323 6.57319 13.4964 6.57319C17.3295 6.57319 20.423 9.66679 20.423 13.5C20.423 17.3332 17.3295 20.4268 13.4964 20.4268ZM20.7067 7.90722C19.8118 7.90722 19.089 7.18448 19.089 6.2895C19.089 5.39452 19.8118 4.67179 20.7067 4.67179C21.6017 4.67179 22.3244 5.39452 22.3244 6.2895C22.3247 6.50202 22.283 6.7125 22.2018 6.90889C22.1206 7.10528 22.0015 7.28373 21.8512 7.434C21.7009 7.58427 21.5225 7.70342 21.3261 7.78462C21.1297 7.86583 20.9192 7.90749 20.7067 7.90722Z" fill="white"/>
@@ -56,7 +60,39 @@
          </div>
       </div>
    </header>
-   <main></main>
+   <main>
+      <section>
+        <div class="main-header">
+           <div class="title-h1">
+              <h1>СПАСИ ЖИЗНЬ</h1>
+           </div>
+           <div class="title-h1__subtitle">
+              <p>Благотворительное общественное объединение защиты животных</p>
+           </div>
+           <div class="main-header__target">
+              <p>Наша цель: помощь бездомным животным. Также мы поддерживаем хвостиков, которые оказались в пункте отлова и временного содержания в Гродно. </p>
+           </div>
+           <div class="main-header__yelllow">
+              <p>У животных, находящихся в пункте отлова и временного содержания бродячих животных, есть всего несколько дней до усыпления...</p>
+           </div>
+         <div class="outerbutton-yellow main-header__button">
+               <div class="innerbutton-yellow">
+                  <button class="button">
+                     <a href="#"><b>Хочу помочь</b></a>
+                  </button>
+               </div>
+         </div>  
+        </div>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+   </main>
    <footer></footer>
 </body>
 </html>
